[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://src/scenes/machine_canvas.gd" id="1_canvas"]
[ext_resource type="Script" path="res://src/scenes/grid.gd" id="2_grid"]

[node name="MachineCanvas" type="Node2D"]
script = ExtResource("1_canvas")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)

[node name="Grid" type="Node2D" parent="."]
z_index = -10
script = ExtResource("2_grid")

[node name="ComponentLayer" type="Node2D" parent="."]

[node name="WireLayer" type="Node2D" parent="."]
z_index = -1

[node name="ParticleLayer" type="Node2D" parent="."]
z_index = 1
